<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Tabata Timer</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="prepare">Prepare:</string>
    <string name="work">Work:</string>
    <string name="rest">Rest:</string>
    <string name="cycles">Cycles:</string>
    <string name="sets">Sets:</string>
    <string name="rest_between_sets">Rest Between sets:</string>
    <string name="cool_down">Cool Down:</string>
    <string name="total">Total:</string>
    <string name="intervals">intervals</string>
    <string name="title">Title</string>
    <string name="current_color">Current Color</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="theme_title">Night Mode</string>
    <string name="list_langs_title">Choose app language</string>
    <string name="lang_title">Language</string>
    <string name="lang_key" translatable="false">language</string>
    <string name="list_font_title">Choose app font size</string>
    <string name="font_title">Font Size</string>
    <string name="font_key" translatable="false">font_size</string>
    <string name="delete_key" translatable="false">deleteData</string>
    <string name="delete_title">Delete All Data</string>
    <string name="size_key" translatable="false">sizeCoef</string>
    <string name="delete_warning">Are you sure you want to delete all stored data?</string>
    <string name="dialog_positive">Yes</string>
    <string name="warning">Warning!</string>
    <string name="warning_message">Do you really want to stop your workout?</string>
    <string name="cancel">Cancel</string>
    <string name="workout_error">Oops. An error occurred!</string>
    <string name="success_delete">All your data have been successfully deleted</string>
    <string name="min_val_error">Minimum value has been reached!</string>
    <string-array name="languages">
        <item>English</item>
        <item>German</item>
    </string-array>
</resources>